# exako-old

./: .gitignore  manage.py  pyproject.toml
exako/: asgi.py  urls.py  wsgi.py
exako/apps/card/: apps.py  forms.py  models.py  urls.py  views.py
exako/apps/core/: apps.py  decorators.py  middleware.py  models.py  permissions.py  schema.py
exako/apps/exercise/: apps.py  constants.py  exercises.py  models.py  urls.py  validators.py  views.py
exako/apps/term/: apps.py  constants.py  models.py  urls.py  validators.py  views.py
exako/apps/user/: apps.py  models.py  views.py
exako/settings/: _base.py  test.py
exako/tests/: conftest.py
exako/tests/card/: test_api.py
exako/tests/exercise/: test_exercises.py
exako/tests/factories/: card.py  exercise.py  term.py  user.py
exako/tests/term/: test_definition_api.py  test_example_api.py  test_image_api.py  test_lexical_api.py  test_pronunciation_api.py  test_term_api.py
fluentia/: asgi.py  urls.py  wsgi.py
fluentia/apps/card/: apps.py  models.py  views.py
fluentia/apps/core/: apps.py  decorators.py
fluentia/settings/: _base.py  test.py
fluentia/tests/: conftest.py
static/hs/: exercise._hs
templates/: abc.html  base.html
templates/auth/: login.html
templates/card/: cardset_home.html  cardset_view.html  deck_home.html
templates/exercise/: a.html  b.html  c.html  d.html  e.html  exercise_base.html  exercise_home.html
templates/term/: browse_term.html  card_view.html  deck_home.html  idiom_view.html  language_view.html  term_home.html  term_lexical_view.html  term_view.html
(+125 files in other folders)
